# py-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: categories.py  orders.py  product.py  users.py
app/core/: config.py
app/db/: session.py
app/models/: categories.py  order_details.py  orders.py  product.py  users.py
app/schemas/orders/: order_schemas.py
app/schemas/product/: product_schema.py
app/schemas/response_base/: response_base.py
app/schemas/user_responses/: create_user_schema.py  delete_user.py  delete_user_schema.py  get_user.py  get_user_schema.py
app/uitils/response_base/: response_base.py
